--- a/VGG.ipynb
+++ b/VGG.ipynb
@@ -88,19 +88,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(306, 306, 3)\n"
+      "(224, 224, 3)\n"
      ]
     }
    ],
    "source": [
-    "VGG = model((306,306))\n",
+    "VGG = model((224,224))\n",
     "from keras import optimizers\n",
     "\n",
     "#Primer modelo\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -158,13 +158,13 @@
     ")\n",
     "train_generator = train_datagen.flow_from_directory(\n",
     "    train_dir,\n",
-    "    target_size=(width, height),\n",
+    "    target_size=(224, 224),\n",
     "    batch_size=batch_size,\n",
     "    class_mode='categorical'\n",
     ")\n",
     "validation_generator = test_datagen.flow_from_directory(\n",
     "    dev_dir,\n",
-    "    target_size=(width, height),\n",
+    "    target_size=(224, 224),\n",
     "    batch_size=batch_size,\n",
     "    class_mode='categorical')\n",
     "    "
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -180,25 +180,25 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "125/125 [==============================] - 50s 402ms/step - loss: 1.0986 - accuracy: 0.2730 - mean_squared_error: 0.2222 - val_loss: 1.0986 - val_accuracy: 0.3403 - val_mean_squared_error: 0.2222\n",
+      "125/125 [==============================] - 28s 224ms/step - loss: 1.0986 - accuracy: 0.2720 - mean_squared_error: 0.2222 - val_loss: 1.0986 - val_accuracy: 0.3368 - val_mean_squared_error: 0.2222\n",
       "Epoch 2/10\n",
-      "125/125 [==============================] - 50s 397ms/step - loss: 1.0986 - accuracy: 0.2400 - mean_squared_error: 0.2222 - val_loss: 1.0986 - val_accuracy: 0.3310 - val_mean_squared_error: 0.2222\n",
+      "125/125 [==============================] - 27s 216ms/step - loss: 1.0986 - accuracy: 0.2584 - mean_squared_error: 0.2222 - val_loss: 1.0986 - val_accuracy: 0.3380 - val_mean_squared_error: 0.2222\n",
       "Epoch 3/10\n",
-      "125/125 [==============================] - 50s 402ms/step - loss: 1.0986 - accuracy: 0.2530 - mean_squared_error: 0.2222 - val_loss: 1.0986 - val_accuracy: 0.3310 - val_mean_squared_error: 0.2222\n",
+      "125/125 [==============================] - 27s 216ms/step - loss: 1.0986 - accuracy: 0.2540 - mean_squared_error: 0.2222 - val_loss: 1.0986 - val_accuracy: 0.3169 - val_mean_squared_error: 0.2222\n",
       "Epoch 4/10\n",
-      "125/125 [==============================] - 48s 387ms/step - loss: 1.0986 - accuracy: 0.2679 - mean_squared_error: 0.2222 - val_loss: 1.0986 - val_accuracy: 0.3204 - val_mean_squared_error: 0.2222\n",
+      "125/125 [==============================] - 28s 220ms/step - loss: 1.0986 - accuracy: 0.2520 - mean_squared_error: 0.2222 - val_loss: 1.0986 - val_accuracy: 0.3380 - val_mean_squared_error: 0.2222\n",
       "Epoch 5/10\n",
-      "125/125 [==============================] - 48s 386ms/step - loss: 1.0986 - accuracy: 0.2779 - mean_squared_error: 0.2222 - val_loss: 1.0986 - val_accuracy: 0.3486 - val_mean_squared_error: 0.2222\n",
+      "125/125 [==============================] - 26s 210ms/step - loss: 1.0986 - accuracy: 0.2520 - mean_squared_error: 0.2222 - val_loss: 1.0986 - val_accuracy: 0.3415 - val_mean_squared_error: 0.2222\n",
       "Epoch 6/10\n",
-      "125/125 [==============================] - 48s 386ms/step - loss: 1.0986 - accuracy: 0.2635 - mean_squared_error: 0.2222 - val_loss: 1.0986 - val_accuracy: 0.3275 - val_mean_squared_error: 0.2222\n",
+      "125/125 [==============================] - 28s 221ms/step - loss: 1.0986 - accuracy: 0.2590 - mean_squared_error: 0.2222 - val_loss: 1.0986 - val_accuracy: 0.3310 - val_mean_squared_error: 0.2222\n",
       "Epoch 7/10\n",
-      "125/125 [==============================] - 49s 391ms/step - loss: 1.0986 - accuracy: 0.2520 - mean_squared_error: 0.2222 - val_loss: 1.0986 - val_accuracy: 0.3345 - val_mean_squared_error: 0.2222\n",
+      "125/125 [==============================] - 27s 213ms/step - loss: 1.0986 - accuracy: 0.2659 - mean_squared_error: 0.2222 - val_loss: 1.0986 - val_accuracy: 0.3239 - val_mean_squared_error: 0.2222\n",
       "Epoch 8/10\n",
-      "125/125 [==============================] - 48s 383ms/step - loss: 1.0986 - accuracy: 0.2445 - mean_squared_error: 0.2222 - val_loss: 1.0986 - val_accuracy: 0.3310 - val_mean_squared_error: 0.2222\n",
+      "125/125 [==============================] - 28s 225ms/step - loss: 1.0986 - accuracy: 0.2765 - mean_squared_error: 0.2222 - val_loss: 1.0986 - val_accuracy: 0.3134 - val_mean_squared_error: 0.2222\n",
       "Epoch 9/10\n",
-      "125/125 [==============================] - 48s 380ms/step - loss: 1.0986 - accuracy: 0.2665 - mean_squared_error: 0.2222 - val_loss: 1.0986 - val_accuracy: 0.3239 - val_mean_squared_error: 0.2222\n",
+      "125/125 [==============================] - 27s 218ms/step - loss: 1.0986 - accuracy: 0.2615 - mean_squared_error: 0.2222 - val_loss: 1.0986 - val_accuracy: 0.3592 - val_mean_squared_error: 0.2222\n",
       "Epoch 10/10\n",
-      "125/125 [==============================] - 48s 382ms/step - loss: 1.0986 - accuracy: 0.2504 - mean_squared_error: 0.2222 - val_loss: 1.0986 - val_accuracy: 0.3556 - val_mean_squared_error: 0.2222\n"
+      "125/125 [==============================] - 27s 218ms/step - loss: 1.0986 - accuracy: 0.2564 - mean_squared_error: 0.2222 - val_loss: 1.0986 - val_accuracy: 0.3380 - val_mean_squared_error: 0.2222\n"
      ]
     }
    ],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -247,6 +247,17 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'plot' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-100-93e1a92c7ef2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlegend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msavefig\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'VGG/images/training_lost.png'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'plot' is not defined"
+     ]
     }
    ],
    "source": [
